--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 # Koneksi Database
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/demo_pbp
-spring.datasource.username=demokuliah
-spring.datasource.password=demo123
+spring.datasource.url=jdbc:postgresql://localhost:5432/myshoppinglist
+spring.datasource.username=postgres
+spring.datasource.password=admin1
 
+server.port=8081
 #spring.jpa.show-sql=true
